Fix CSS gap and align-items in find-radio.component.css

--- a/src/app/radio/Pages/find-radio/find-radio.component.css
+++ b/src/app/radio/Pages/find-radio/find-radio.component.css
@@ -19,7 +19,8 @@ section{
 .lbls{
     display: flex;
     flex-direction: row;
-    gap:0.5em
+    gap:0.5em;
+    align-items: center;
 }
 .title{
     font-size: xx-large;
